[gd_scene load_steps=15 format=3 uid="uid://dg16ixgfbx3tt"]

[ext_resource type="Theme" uid="uid://dptpxyk5ldmai" path="res://ui/main_theme.tres" id="1_rro6h"]
[ext_resource type="Texture2D" uid="uid://cfoyabrersg16" path="res://screens/screen_gradient.tres" id="2_epoi1"]
[ext_resource type="Texture2D" uid="uid://bfismngw4yyuw" path="res://player/player.png" id="2_jqgc6"]
[ext_resource type="Script" path="res://screens/level_end_screen.gd" id="2_pvuai"]
[ext_resource type="AudioStream" uid="uid://8voqagr7qbll" path="res://ui/level_won_sound.ogg" id="3_sk0wu"]
[ext_resource type="PackedScene" uid="uid://bx028t1351pii" path="res://ui/ui_particles.tscn" id="4_8h6pq"]
[ext_resource type="PackedScene" uid="uid://dth1ehlyddit0" path="res://screens/end_screen_progress_bar.tscn" id="4_vhiue"]
[ext_resource type="Texture2D" uid="uid://bjickm1g0wltn" path="res://ui/star_particle.png" id="5_qo0j6"]

[sub_resource type="Curve" id="Curve_g3m07"]
_data = [Vector2(0, 0.747368), 0.0, 0.0, 0, 0, Vector2(0.802676, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0126316), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_xxgd4"]
offsets = PackedFloat32Array(0, 0.302239, 0.835821, 0.985075)
colors = PackedColorArray(1, 1, 1, 0, 0.878431, 0.85098, 0.509804, 0.760784, 0.878431, 0.85098, 0.509804, 0.760784, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_ihgsp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Eyes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.199999, -0.100002)]
}

[sub_resource type="Animation" id="Animation_rppag"]
resource_name = "die"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 0.7, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 10, 11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"add_wizard_puff"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Eyes:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.7, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-0.199999, -0.100002), Vector2(-0.199999, 0.799999), Vector2(2.1, 4.5), Vector2(2.1, 6.5)]
}

[sub_resource type="Animation" id="Animation_f1oqa"]
resource_name = "win"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0, 0, 1, 2, 3, 4, 5, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Eyes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 2.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-0.199999, -0.100002), Vector2(-0.199999, 0.599998), Vector2(-0.199999, -0.100002), Vector2(-0.199999, 0.599998), Vector2(-0.199999, -0.100002)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2yy6"]
_data = {
"RESET": SubResource("Animation_ihgsp"),
"die": SubResource("Animation_rppag"),
"win": SubResource("Animation_f1oqa")
}

[node name="LevelEndScreen" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rro6h")
texture = ExtResource("2_epoi1")
script = ExtResource("2_pvuai")
level_won_sound = ExtResource("3_sk0wu")

[node name="DefaultParticles" parent="." instance=ExtResource("4_8h6pq")]

[node name="WinParticles" parent="." instance=ExtResource("4_8h6pq")]
emitting = false
texture = ExtResource("5_qo0j6")
initial_velocity_min = 120.0
initial_velocity_max = 120.0
scale_amount_min = 0.2
scale_amount_max = 1.0
scale_amount_curve = SubResource("Curve_g3m07")
color_ramp = SubResource("Gradient_xxgd4")

[node name="Text1" type="Label" parent="."]
layout_mode = 2
offset_left = 136.0
offset_top = 166.0
offset_right = 283.0
offset_bottom = 247.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 64
text = "Level
"

[node name="Text2" type="Label" parent="."]
layout_mode = 2
offset_left = 263.0
offset_top = 228.0
offset_right = 393.0
offset_bottom = 307.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 62
text = "Won"

[node name="Wizard" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 250.0
offset_top = 411.0
offset_right = 250.0
offset_bottom = 411.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Wizard"]
texture_filter = 1
position = Vector2(20, 0)
scale = Vector2(10, 10)
texture = ExtResource("2_jqgc6")
hframes = 4
vframes = 3

[node name="Eyes" type="Polygon2D" parent="Wizard/Sprite2D"]
show_behind_parent = true
position = Vector2(-0.199999, -0.100002)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0.200001, -1.1, -1.4, -1.1, -1.4, 0.5, 0.200001, 0.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Wizard"]
libraries = {
"": SubResource("AnimationLibrary_q2yy6")
}

[node name="StatsAndButtons" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 86.0
offset_top = 527.0
offset_right = 455.0
offset_bottom = 743.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="LevelsWon" type="HBoxContainer" parent="StatsAndButtons"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="StatsAndButtons/LevelsWon"]
custom_minimum_size = Vector2(165, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Levels won:"

[node name="LevelsWonProgressBar" parent="StatsAndButtons/LevelsWon" instance=ExtResource("4_vhiue")]
unique_name_in_owner = true
layout_mode = 2

[node name="Enemies Killed" type="HBoxContainer" parent="StatsAndButtons"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="StatsAndButtons/Enemies Killed"]
custom_minimum_size = Vector2(165, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Enemies slain:"

[node name="EnemiesKilledProgressBar" parent="StatsAndButtons/Enemies Killed" instance=ExtResource("4_vhiue")]
unique_name_in_owner = true
layout_mode = 2
max_value = 600.0
value = 300.0

[node name="NextLevel" type="Button" parent="StatsAndButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="MainMenu" type="Button" parent="StatsAndButtons"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(175, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="Awesome" type="Button" parent="StatsAndButtons"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(175, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Awesome!"
